docs/api/qiskit/0.41/ibmq_utils.mdx
---
title: utils (v0.41)
description: API reference for qiskit.providers.ibmq.utils in qiskit v0.41
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.providers.ibmq.utils
---

<Admonition title="Warning" type="caution">
  The package `qiskit-ibmq-provider` is being deprecated and its repo is going to be archived soon. Please transition to the new packages. More information in [https://ibm.biz/provider\_migration\_guide](https://ibm.biz/provider_migration_guide)
</Admonition>

<span id="module-qiskit.providers.ibmq.utils" />

<span id="qiskit-providers-ibmq-utils" />

<span id="utilities-qiskit-providers-ibmq-utils" />

# Utilities

`qiskit.providers.ibmq.utils`

Utility functions related to the IBM Quantum Provider.

## Conversion

|                                                                                                                                     |                                                                           |
| ----------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------- |
| [`seconds_to_duration`](qiskit.providers.ibmq.utils.seconds_to_duration "qiskit.providers.ibmq.utils.seconds_to_duration")(seconds) | Converts seconds in a datetime delta to a duration.                       |
| [`utc_to_local`](qiskit.providers.ibmq.utils.utc_to_local "qiskit.providers.ibmq.utils.utc_to_local")(utc\_dt)                      | Convert a UTC `datetime` object or string to a local timezone `datetime`. |

## Qobj Utils

|                                                                                                                                                         |                                                                       |
| ------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------- |
| [`update_qobj_config`](qiskit.providers.ibmq.utils.update_qobj_config "qiskit.providers.ibmq.utils.update_qobj_config")(qobj\[, backend\_options, ...]) | Update a `Qobj` configuration from backend options and a noise model. |

## Misc Functions

|                                                                                                                                            |                                              |
| ------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------- |
| [`to_python_identifier`](qiskit.providers.ibmq.utils.to_python_identifier "qiskit.providers.ibmq.utils.to_python_identifier")(name)        | Convert a name to a valid Python identifier. |
| [`validate_job_tags`](qiskit.providers.ibmq.utils.validate_job_tags "qiskit.providers.ibmq.utils.validate_job_tags")(job\_tags, exception) | Validates input job tags.                    |

